--- a/style.css
+++ b/style.css
@@ -356,7 +356,7 @@ h2 {
 
 .offer {
   width: 372px;
-  height: 421px;
+  min-height: 421px;
   box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.1);
   border-radius: 30px;
   padding: 20px;
@@ -406,7 +406,7 @@ h6 {
 }
 
 .about {
-  min-width: 315px;
+  width: 315px;
   text-align: left;
 }
 
