--- a/small-device.css
+++ b/small-device.css
@@ -140,20 +140,38 @@
     display: flex;
     margin: 25px 0 25px;
     justify-content: space-between;
+    column-gap: 30px;
+  }
+
+  .offer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   .footer {
     margin-top: 25px;
     padding: 25px 25px;
-    justify-content: center;
-    align-items: center;
     row-gap: 25px;
+    font-size: 0.85em;
   }
 
   .contactList {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: space-around;
+    width: 90vw;
+  }
+
+  .about {
+    margin-bottom: 30px;
+  }
+
+  .social {
+    justify-content: space-around;
+  }
+
+  .footer > p {
+    margin-top: 30px;
   }
 }
 
@@ -196,7 +214,8 @@
     text-align: center;
   }
 
-  .social {
-    justify-content: space-around;
+  .contactList {
+    align-items: center;
+    flex-direction: column;
   }
 }
